--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 </head>
 <body style="margin: 0;  padding: 0; width: 100%; height: 100%">
-    <canvas style="display:block; margin: auto;"></canvas>
-    <script src="build.js"></script>
+	<video style="display:block; position: absolute;"></video>
+	<canvas style="display:block; position: absolute; top: 0"></canvas>	
+	<script src="build.js"></script>
 </body>
 </html>
