--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html style="margin: 0; padding: 0;width: 100%; height: 100%">
 <head>
+	<title>QRCode Scanner Demo</title>
 </head>
 <body style="margin: 0;  padding: 0; width: 100%; height: 100%">
 	<video style="display:block; position: absolute;"></video>
